# spectorr_backend

./: .gitignore  Makefile  README.md  dockerfile  pyproject.toml
src/spectorr_backend/: app.py
src/spectorr_backend/routes/: demo.py
tests/: test_health.py
